--- a/2024/css/general.css
+++ b/2024/css/general.css
@@ -266,7 +266,7 @@ color: #ECEBEB;
 	padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
 	padding-bottom: 50px;
 	color: #d2d9eafc;
-	background: url(../img/intro/mel_skyline.jpg) no-repeat center center;
+	background: url(../img/intro/mel6.jpg) no-repeat center center;
 	/* background: url(../img/intro/singapore1.jpg) no-repeat center center; */
 	background-size: cover;
 	text-align: center;
