--- a/2025/css/general.css
+++ b/2025/css/general.css
@@ -25,7 +25,7 @@ body, html {
 .content-section-c {
 	border-top: 1px solid #32465A;
 	background: url(../img/intro/bottom.png) no-repeat;
-	background-size: 2046px 181px;
+	background-size: cover;
 	border-bottom: 1px solid #32465A;
 	background-color: #34495e;
 	opacity: 0.5;
@@ -393,7 +393,7 @@ color: #ECEBEB;
 .navbar-default {
 	background-color: #ecf0f1;
 	background: url(../img/intro/nav.png) no-repeat;
-	background-size: 2046px 110px;
+	background-size: cover;
 }
 
 .network-name {
