--- a/css/style.css
+++ b/css/style.css
@@ -1723,12 +1723,12 @@ fieldset[disabled] .input-group-btn .btn-default.active {
 .input-group-rounded .input-group-btn + .form-control {
   padding-left: 0;
 }
-.intro-header {
+.homepage-intro-header {
 	height: 100%; /* Full PAge */
 	padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
 	padding-bottom: 50px;
 	color: #d2d9eafc;
-	background: url(./2024/img/intro/banner-designed.jpg) no-repeat center center;
+	background: url(../2024/img/intro/banner-designed.jpg) no-repeat center center;
 	/* background: url(../img/intro/singapore1.jpg) no-repeat center center; */
 	background-size: cover;
 	text-align: center;
@@ -4737,6 +4737,8 @@ footer p {
 		}
 		.col-sm-4 {margin-bottom: 120px; text-align:center;}
 		.col-sm-4 > i{text-align:center;}
+    .col-sm-20 {margin-bottom: 120px; text-align:center;}
+		.col-sm-20 > i{text-align:center;}
 		.col-sm-5 .img-responsive {display:none}
 		.col-sm-5 {margin-top:120px}
 		.section-heading{text-align:center}
